# simcraft

./: .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile.standalone  README.md  docker-compose.source.yml  docker-compose.yml  package-lock.json  package.json  standalone-entrypoint.sh
backend/calibration/: Cargo.toml  README.md
backend/calibration/scenarios/: sortbek-local-pipeline-benchmark.json  stub.calibration.json  stub.json  topgear-cutting-edge-spread-sortbek-bm-gems.raw.json  topgear-high-spread-sortbek-bm-9k.raw.json  topgear-high-spread-sortbek-bm-gear.simc
backend/calibration/src/: main.rs
backend/core/: Cargo.toml  season-config.json
backend/core/src/: addon_parser.rs  game_data.rs  gear_resolver.rs  item_db.rs  lib.rs  log_buffer.rs  models.rs  profileset_generator.rs  result_parser.rs  server.rs  simc_runner.rs  simc_string.rs  talent_normalize.rs
backend/core/src/compute/: local.rs  mod.rs  provider.rs  registry.rs  simmit.rs
backend/core/src/db/: cloud_chunks_repo.rs  combo_dedup_repo.rs  combo_metadata_repo.rs  job_repo.rs  mod.rs  stage_batches_repo.rs  stage_results_repo.rs  triage_batches_repo.rs
backend/core/src/profileset_generator/: base_profile.rs  checkpoint.rs  constraints.rs  droptimizer.rs  emit.rs  enchant_gem.rs  estimate.rs  gem_combos.rs  identity_key.rs  iterator.rs  iterator_from_request.rs  resume.rs  selection.rs  simc.rs  stage_pipeline.rs  survivor_policy.rs  top_gear.rs  triage.rs  upgrade_compare.rs
backend/core/src/server/: api_routes.rs  cloud_estimate.rs  cloud_streaming.rs  droptimizer_handlers.rs  enchant_gem_handlers.rs  game_data_handlers.rs  handler_prep.rs  helpers.rs  job_handlers.rs  mod.rs  provider_handlers.rs  (+7 more)
(+189 files in other folders)
