[package]
name = "simhammer-calibration"
version = "0.1.0"
edition = "2021"

[dependencies]
simhammer-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "any"] }
