[package]
name = "simhammer-core"
version.workspace = true
edition = "2021"

[features]
default = []
desktop = ["dep:sysinfo"]
web = []
postgres = ["sqlx/postgres"]

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
regex = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
ureq = { version = "3", features = ["json"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"

[dependencies.sysinfo]
version = "0.33"
optional = true

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "any", "sqlite"]
